# dlsite-recommendation-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  .spaceignore  Discovery.md  Dockerfile  LICENSE  README.md  Spacefile  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: release.yml
dlsite_recommendation_llm/: __init__.py  cli.py  main.py
scripts/: add_doc_to_index.py  convert_db_to_csv.py
